# prosperity_rust_backtester

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
datasets/round2/: prices_round_2_day_-1.csv  prices_round_2_day_0.csv  prices_round_2_day_1.csv  trades_round_2_day_-1.csv  trades_round_2_day_0.csv  trades_round_2_day_1.csv
datasets/round3/: trades_round_3_day_0.csv  trades_round_3_day_1.csv  trades_round_3_day_2.csv
datasets/round4/: trades_round_4_day_1.csv  trades_round_4_day_2.csv  trades_round_4_day_3.csv
datasets/round5/: trades_round_5_day_2.csv  trades_round_5_day_3.csv  trades_round_5_day_4.csv
datasets/round6/: prices_round_6_day_2.csv  prices_round_6_day_3.csv  prices_round_6_day_4.csv  trades_round_6_day_2.csv  trades_round_6_day_3.csv  trades_round_6_day_4.csv
scripts/: cargo_local.sh  filter_round_products.py
src/: cli.rs  main.rs  model.rs  pytrader.rs  runner.rs
traders/: all_products_trader.py  latest_trader.py
