[package]
name = "rust_backtester"
version = "0.4.9"
edition = "2024"
description = "Standalone Rust IMC Prosperity 4 backtester"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/GeyzsoN/prosperity_rust_backtester"
homepage = "https://github.com/GeyzsoN/prosperity_rust_backtester"
keywords = ["imc", "backtester", "trading", "rust"]
categories = ["command-line-utilities", "simulation"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**",
    "traders/*.py",
    "traders/**/*.py",
    "datasets/tutorial/**",
    "datasets/round1/**",
    "datasets/round2/**",
    "datasets/round3/**",
    "datasets/round4/**",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
indexmap = { version = "2.12", features = ["serde"] }
pyo3 = { version = "0.27", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
time = { version = "0.3", features = ["formatting"] }

[profile.release]
lto = false
codegen-units = 8
panic = "abort"
strip = "none"
