[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "imc-rust-backtester"
version = "0.4.1"
description = "Standalone Rust IMC Prosperity 4 backtester"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
keywords = ["imc", "backtester", "trading", "rust"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries",
]

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
